--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ djangorestframework-simplejwt==4.7.2
 Pillow==9.3.0
 PyJWT==2.1.0
 requests==2.26.0
-isort
-djoser
+isort==5.13.2
+djoser==2.1.0
+python-dotenv==1.0.1
